--- a/css/style.css
+++ b/css/style.css
@@ -644,8 +644,181 @@ position: relative;
         margin-bottom: 80px;
     }
 }
+/* 비지니스 */
+.business{
+    position: relative;
+    display: block;
+}
+.sw-business{
+    height:400px;
+}
+.sw-business a{
+    position: relative;
+    display: block;
+    width:100%;
+    height:100%;
+    background-color: #eee;
+    padding: 85px 60px;
+    transition: background-color 0.3s;
+}
+.business a h2{
+    margin-bottom: 14px;
+    font-size: 24px;
+}
+.business a p{
+    margin-bottom: 42px;
+    font-size: 17px;
+    opacity: 0.8;
+    line-height: 1.4;
+}
+.business a span{
+    display: block;
+    width:90px;
+    height:50px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 600;
+    border-bottom: 2px solid #222;
+    letter-spacing: -1px;
+    transition: border 0.3s color 0.3s;
+}
+.business a:hover span{
+    border-bottom: 2px solid #fff;
+}
+.business a h2,.business a p,.business a span{
+    position: relative;
+    transition: color 0.3s;
+    z-index: 1;
+} 
+.business :hover h2,.business :hover p,.business :hover span{
+    color:#fff;
+}
+.business a img{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    max-width: 317px;
+    width:46%;
+}
+.business a:hover.business-bg-1{
+    background-color: #3891b2;
+}
+.business a:hover.business-bg-2{
+    background-color: #db574f;
+}
+.business a:hover.business-bg-3{
+    background-color: #f0b23a;
+}
+.business-modal{
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:400px;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    display: none;
+  
+}
+@media screen and(max-width:1600px){
+   .sw-business a img{
+    padding:30px;
+   } 
+}
+@media screen and(max-width:1440px){
+   .business a img{
+    width: 70%;
+   } 
+}
+@media screen and(max-width:1024px){
+   .sw-business a {
+    padding:60px;
+   } 
+   .business a h2{
+ font-size: 16px;
+   }
+   .business a img{
+    width:60%;
+   }
+}
+@media  screen and(max-width:640px){
+    .sw-business a{
+        padding:25px 20px;
+    }
+    .sw-business a p{
+        font-size: 15px;
+    }
+    .sw-business a span{
+      height:40px;
+      line-height:40px;
+      font-size: 14px;
+    }
+}
+@media screen and (max-width: 480px) {
+    .business a img {
+      width: 70%;
+    }
+  }
+  /* 하단 */
+.footer{
+    position: relative;
+    display: block;
+    background-color: #222;
+    padding: 60px 0;
+}
+.footer .inner{
+    width:calc(100% - 20px * 2);
+    margin: 0 auto;
+    max-width: 1420px;
+}
+.footer-list{
+    text-align: center;
+    font-size: 15px;
+    color:#666;
+    line-height: 1.6;
+}
+.footer-list li{
+    padding:5px 0;
+}
+.footer-list li a{
+ color:#666;
+}
+.footer-list li a:hover{
+    color:#4e4c4c;
+    text-decoration: underline;
+}
+.footer-list span{
+    display: inline-block;
+    white-space:no-wrap;
+}
+.footer-list p{
+    padding-top:20px;
+}
+.footer-bar{
+    position: relative;
+    display: inline-block;
+    padding: 0 18px;
+}
+.footer-bar::before{
+    content:"";
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    width:1px;
+    height:10px;
+    background-color: #666;
+}
+@media screen and (max-width:640px) {
+    .footer-list span{
+        display: block;
+        
+    }
+    .footer-bar{
+        display: none;
 
-
-
-
-
+    }
+}
