--- a/css/style.css
+++ b/css/style.css
@@ -943,52 +943,40 @@ body {
   }
 }
 /* 안내창 */
-body.active {
-    overflow-y: auto;
-  }
-  .modal-wrap{
-    font-family: "Noto Sans KR", Helvetica, "맑은 고딕", "malgun gothic",
-    "Apple SD Gothic Neo", sans-serif;
-   position: fixed;
-   top:0;
-   left: 0;
-   width:100%;
-   height:100%;
-   background: rgba(0, 0, 0, 0.8);
-   z-index:99999;
-   
-  }
-  .modal-main{
-    position: absolute;
-    width:500px;
-    height:400px;
-    background-color: #fff;
-    border-radius: 20px;
-     top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+.modal-wrap{
+    position: fixed;
+    top:0;
+    left: 0;
+    width:100%;
+    height:100%;
+    background: rgba(0, 0, 0, 0.8);
     z-index:99999;
-    text-align: center;
+   }
+   .modal-main{
+     position: absolute;
+     top: 50%;
+     left:50%;
+     transform: translate(-50%,-50%);
+     width:600px;
+     height: 400px;
+     padding: 30px;
+     border-radius: 20px;
+     background-color: #fff;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+   }
+   .modal-close{
+    position: absolute;
+    right:10px;
+    bottom:10px;
+   }
+ .fadeOut{
+     animation: fadeOut 0.3s forwards;
+    
+ }
+ @keyframes fadeOut{
+  100%{
+    opacity: 0;
   }
- 
-  .modal-notice{
-    line-height:50px;
-    padding-top:80px;
-    font-weight: 600;
-  }
-  .modal-notice span{
-    font-weight: 300;
-  }
-  .modal-notice strong{
-    color: #ed1c24;
-    background: linear-gradient(to top, yellow 50%, transparent 50%);
-  }
-  .modal-close{
-    padding-top:90px;
-  }
-  .modal-close i{
-    font-style: normal;
-  }
-  .modal-close strong{
-    font-weight: 600;
-  }
+ }
